--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 public/dashboard_video.MOV
 public/dashboard_video.mp4
+
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+
+.env
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
